--- a/portfolio.css
+++ b/portfolio.css
@@ -233,6 +233,7 @@ a.site-logo {
   }
 
   .meet-me{
+    border: 2px solid pink;
     margin-top: 50px;
     margin: 10px 10px;
     height: 70%;
@@ -302,7 +303,7 @@ a.site-logo {
 
 
 button {
-  margin-top: 20px;
+  margin-top: 30px;
   background:tomato;
   border-radius: 5px;
   border-color: black;
@@ -357,8 +358,16 @@ hr{
 }
 
 .hero-text-3{
-    font-size:1.5rem;
-    letter-spacing: 8px;
+    font-size:1.3rem;
+    letter-spacing: 6px;
+}
+
+.hero-paragraph{
+  width: 100%;
+}
+
+.icons{
+  margin-top: 20px;
 }
 
 } 
@@ -403,14 +412,19 @@ hr{
 }
 
 .hero-paragraph{
-  width: 90%;
+  width: 100%;
   font-size: 15px;
+}
+
+.icons{
+  width: 35px;
+  height: 35px;
 }
 
 button {
   margin-top: 20px;
   font-size: 16px;
-  width: 30%;
+  width: 35%;
   height: 10%;
   padding: 5px 10px 5px 10px;
 }
