--- a/portfolio.css
+++ b/portfolio.css
@@ -8,7 +8,7 @@ body {
 }
 
 
-
+/* NAV SECTION BEGINS */
 .navbar-area {
   background: transparent;
 }
@@ -218,8 +218,8 @@ a.site-logo {
       font-size: 20px;
       margin-top: 25px;
     }
-
 }
+/* NAV SECTION ENDS */
 
 
 /* HERO SECTION STARTS */
@@ -296,7 +296,7 @@ a.site-logo {
   margin-top: 10px;
   width: 40px;
   height: 40px;
-  padding-left: 5px;
+  padding-left: 10px;
   color: #fafafa;
 }
 
@@ -490,8 +490,6 @@ button {
   height: 25%;
   padding: 2px 5px 2px 5px;
 }
-
-
 } 
 
 /* MOBILE PHONE POTRAIT */
@@ -561,6 +559,256 @@ button {
   height: 20%;
   padding: 2px 5px 2px 5px;
 }
+}
+/* HERO SECTION ENDS */
 
+
+
+/* ABOUT ME SECTION BEGINS */
+.about-me{
+  height: 90vh;
+  display: flex;
+  flex-direction: row; 
+  justify-content: center;
+  align-items: center; 
+}
+
+.about-me-content{
+  width: 80%;
+  height: 95%;
+  display: flex;
+  flex: row;
+  justify-content: center;
+  align-items: center;
 
 }
+
+.separator{
+  display: flex;
+  align-items: center;
+}
+
+.separator h2{
+  padding: 0 0.5rem; 
+}
+
+.separator .line{
+  flex: 1;
+  height: 1px;
+  background-color: #ffffff;
+  opacity: 30%;
+}
+
+.about-me-text{
+  width: 40%;
+  height: 99%; 
+  margin-top: 0; 
+  line-height: 25px;
+}
+
+.about-me-image-container{
+  width: 320px;
+  height: 320px;
+  margin-left: 50px;
+  box-shadow: 8px 8px 2px teal;
+}
+
+.about-me-image{
+  width: 320px;
+  height: 320px;
+}
+
+.proficiency-ul {
+  padding-left: 2px;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  height: 15%;
+}
+
+ .proficiency-li {
+  padding-left: 15px;
+  background-image: url('Capture.PNG');
+  background-position: 0 5px;
+  background-repeat: no-repeat;
+  width: 100%;
+  display: inline;
+} 
+
+/* SMALL SCREENS, LAPTOPS */
+@media only screen and (max-width: 1024px) {
+
+.about-me{
+  height: 110vh;
+}
+
+.about-me-content{
+  width: 85%;
+  height: 98%;
+}
+
+.separator h2{
+  padding: 0 0.5rem; 
+}
+
+.separator .line{
+  flex: 1;
+  height: 1px;
+  background-color: #ffffff;
+}
+
+.about-me-text{
+  width: 50%;
+  height: 98%; 
+  margin-top: -10px; 
+}
+
+.about-me-image-container{
+  width: 300px;
+  height: 300px;
+  margin-left: 30px;
+}
+
+.about-me-image{
+  width: 300px;
+  height: 300px;
+}
+
+ .proficiency-li {
+  background-position: 0 5px;
+} 
+} 
+
+ /* iPADS, TABLETS */
+ @media only screen and (max-width: 768px) {
+   
+.about-me{
+  height: 120vh;
+}
+
+.about-me-content{
+  flex-direction: column;
+  margin-top: -20px; 
+  width: 95%;
+  height: 95%;
+}
+
+.about-me-text{
+  width: 90%;
+  height: 95%; 
+  margin-top: 10px; 
+  line-height: 20px;
+}
+
+.about-me-image-container{
+  width: 250px;
+  height: 250px;
+  margin-left: 20px;
+  box-shadow: 8px 8px 2px teal;
+}
+
+.about-me-image{
+  width: 100%;
+  height: 100%;
+}
+
+.proficiency-ul {
+  width: 60%;
+}
+ }
+ /* MOBILE LANDSCAPE */
+ @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) {
+   
+  .about-me{
+    height: 150vh;
+  }
+  
+  .about-me-content{
+    flex-direction: column;
+    margin-top: 200px; 
+    width: 95%;
+    height: 95%;
+  }
+  
+  .about-me-text{
+    width: 90%;
+    height: 95%; 
+    margin-top: 5px; 
+    line-height: 20px;
+  }
+  
+  .about-me-image-container{
+    width: 200px;
+    height: 200px;
+    margin-left: 20px;
+    box-shadow: 8px 8px 2px teal;
+  }
+  
+  .about-me-image{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .proficiency-ul {
+    width: 60%;
+  }
+
+  .proficiency-li {
+    padding-left: 5px;
+    background-position: 0 3px;
+    display: inline;
+    font-size: 15px;
+  } 
+
+} 
+
+/* MOBILE PHONE POTRAIT */
+@media only screen and (max-width: 480px) {
+  
+.about-me{
+  height: 120vh;
+  margin-top: 110px;
+}
+
+.about-me-content{
+  flex-direction: column;
+  margin-top: -60px; 
+  width: 95%;
+  height: 95%;
+}
+
+.about-me-text{
+  width: 90%;
+  height: 95%; 
+  margin-top: 0; 
+  line-height: 18px;
+}
+
+.about-me-image-container{
+  width: 200px;
+  height: 200px;
+  margin-left: 0;
+  box-shadow: 8px 8px 2px teal;
+}
+
+.about-me-image{
+  width: 100%;
+  height: 100%;
+}
+
+.proficiency-ul {
+  width: 98%;
+}
+
+.proficiency-li {
+  padding-left: 10px;
+  background-position: 0 3px;
+  display: inline;
+  font-size: 12px;
+} 
+
+}
+
+
+/* ABOUT ME SECTION ENDS */
+
