--- a/portfolio.css
+++ b/portfolio.css
@@ -434,7 +434,6 @@ button {
 
  /* MOBILE LANDSCAPE */
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
-    
   
   .hero{
     height: 130vh;
@@ -576,11 +575,11 @@ button {
 .about-me-content{
   width: 80%;
   height: 95%;
+  padding: 0 20px;
   display: flex;
   flex: row;
   justify-content: center;
   align-items: center;
-
 }
 
 .separator{
@@ -606,16 +605,25 @@ button {
   line-height: 25px;
 }
 
+.about-me-image{
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
 .about-me-image-container{
-  width: 320px;
-  height: 320px;
-  margin-left: 50px;
+  width: 300px;
+  height: 300px;
+  margin-left: 0;
   box-shadow: 8px 8px 2px teal;
 }
 
-.about-me-image{
-  width: 320px;
-  height: 320px;
+.about-image{
+  width: 300px;
+  height: 300px;
 }
 
 .proficiency-ul {
@@ -639,7 +647,7 @@ button {
 @media only screen and (max-width: 1024px) {
 
 .about-me{
-  height: 110vh;
+  height: 100vh;
 }
 
 .about-me-content{
@@ -660,18 +668,22 @@ button {
 .about-me-text{
   width: 50%;
   height: 98%; 
+  padding: 0 10px;
   margin-top: -10px; 
 }
 
-.about-me-image-container{
-  width: 300px;
-  height: 300px;
-  margin-left: 30px;
+.about-me-image{
+
 }
 
-.about-me-image{
-  width: 300px;
-  height: 300px;
+.about-me-image-container{
+  width: 250px;
+  height: 250px;
+}
+
+.about-image{
+  width: 250px;
+  height: 250px;
 }
 
  .proficiency-li {
@@ -689,6 +701,7 @@ button {
 .about-me-content{
   flex-direction: column;
   margin-top: -20px; 
+  padding: 0 15px;
   width: 95%;
   height: 95%;
 }
@@ -697,6 +710,7 @@ button {
   width: 90%;
   height: 95%; 
   margin-top: 10px; 
+  padding: 0 10px;
   line-height: 20px;
 }
 
@@ -708,24 +722,43 @@ button {
 }
 
 .about-me-image{
+  width: 90%;
+}
+
+.about-image{
   width: 100%;
   height: 100%;
 }
 
+.proficiency{
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .proficiency-ul {
   width: 60%;
+  height: 80%;
+  margin-top: 5px;
+  padding: 10px 20px;
 }
+
+.proficiency-li{
+}
+
  }
  /* MOBILE LANDSCAPE */
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) {
    
   .about-me{
-    height: 150vh;
+    height: 250vh;
   }
   
   .about-me-content{
     flex-direction: column;
-    margin-top: 200px; 
+    margin-top: -10px; 
     width: 95%;
     height: 95%;
   }
@@ -766,8 +799,8 @@ button {
 @media only screen and (max-width: 480px) {
   
 .about-me{
-  height: 120vh;
-  margin-top: 110px;
+  height: 150vh;
+  margin-top: 20px;
 }
 
 .about-me-content{
@@ -808,6 +841,84 @@ button {
 } 
 }
 /* ABOUT ME SECTION ENDS */
+
+
+ /* CONTACT-ME SECTION STARTS */
+.contact-me{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  padding: 20px 0;
+}
+
+.form-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* position: absolute; */
+  width: 80%;
+  height: 80%;
+  /* top: 50%; */
+  padding: 0 20px;
+}
+
+.form-feild{
+  background: transparent;
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 40px;
+  border-radius: 9px;
+  display: flex;
+  flex-direction: column;
+  margin-right: ;
+}
+
+.input-feild{
+  
+}
+
+.form-button{
+  border-radius: 4px;
+  display: block;
+  color: aqua;
+  background: #666;
+  padding: 10px;
+  width: 50%;
+  cursor: pointer;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.input-feild .input{
+background: transparent;
+  color: aqua;
+  border: 0;
+  font-family: 'Roboto', sans-serif;
+  border-bottom: 2px solid rgb(60, 218, 55);
+  padding: 10px;
+  margin: 10px 20px;
+  width: 100%;
+  
+}
+::webkit-input-placeholder{
+  color: aquamarine;
+}
+
+::moz-input-placeholder{
+  color: aquamarine;
+}
+button:hover{
+  color: orange;
+  background-color: cyan;
+}
+
+
+
+
+ /* CONTACT-ME SECTION ENDS */
+
 
 
 
@@ -871,7 +982,6 @@ width: 50px;
   }
   
   .form-container{
-    border: 2px solid red;
     padding-top: 10px;
     text-align: center;
     width: 70%;
