--- a/portfolio.css
+++ b/portfolio.css
@@ -245,7 +245,7 @@ a.site-logo {
 
 .text-area{
     width: 60%;
-    height: 90%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -293,7 +293,7 @@ a.site-logo {
 }
 
 .icons{
-  margin-top: 10px;
+  margin-top: 8px;
   width: 40px;
   height: 40px;
   padding-left: 10px;
@@ -302,15 +302,15 @@ a.site-logo {
 
 
 button {
-  margin-top: 30px;
+  margin-top: 17px;
   background:tomato;
   border-radius: 5px;
   border-color: black;
   font-family: Arial;
   color: #ffffff;
   font-size: 30px;
-  width: 35%;
-  padding: 10px 20px 10px 20px;
+  width: 30%;
+  padding: 5px 10px 5px 10px;
   text-decoration: none;
 }
 
@@ -366,7 +366,7 @@ hr{
 }
 
 .icons{
-  margin-top: -5px;
+  margin-top: -10px;
 }
 
 } 
@@ -416,9 +416,10 @@ hr{
 }
 
 .icons{
-  margin-top: -10px;
-  width: 35px;
-  height: 35px;
+  margin-top: -20px;
+  margin-left: -10px;
+  width: 30px;
+  height: 30px;
 }
 
 button {
@@ -436,7 +437,7 @@ button {
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
   
   .hero{
-    height: 130vh;
+    height: 110vh;
   }
 
   .meet-me{
@@ -486,7 +487,7 @@ button {
   margin-top: 10px;
   font-size: 20px;
   width: 30%;
-  height: 25%;
+  height: 30%;
   padding: 2px 5px 2px 5px;
 }
 } 
@@ -546,16 +547,16 @@ button {
 
 .icons{
   padding-left: 0;
-  margin-top: 8px;
-  width: 40px;
-  height: 40px;
+  margin-top: 5px;
+  width: 35px;
+  height: 35px;
 }
 
 button {
   margin-top: 15px;
   font-size: 18px;
   width: 50%;
-  height: 20%;
+  height: 17%;
   padding: 2px 5px 2px 5px;
 }
 }
@@ -610,7 +611,6 @@ button {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
 
 }
 
@@ -626,8 +626,13 @@ button {
   height: 300px;
 }
 
+.proficiency {
+  width: 80%;
+}
+
 .proficiency-ul {
-  padding-left: 2px;
+  width: 100%;
+  padding-left: 5px;
   list-style-type: none;
   display: flex;
   justify-content: space-around;
@@ -637,7 +642,7 @@ button {
  .proficiency-li {
   padding-left: 15px;
   background-image: url('Capture.PNG');
-  background-position: 0 5px;
+  background-position: 5px 5px;
   background-repeat: no-repeat;
   width: 100%;
   display: inline;
@@ -695,23 +700,32 @@ button {
  @media only screen and (max-width: 768px) {
    
 .about-me{
-  height: 120vh;
+  height: 100vh;
+  margin-top: 40px; 
+
 }
 
 .about-me-content{
   flex-direction: column;
-  margin-top: -20px; 
+  margin-top: -50px; 
   padding: 0 15px;
   width: 95%;
   height: 95%;
 }
 
 .about-me-text{
+  border: 2px solid red;
   width: 90%;
   height: 95%; 
-  margin-top: 10px; 
+  margin-top: 15px; 
   padding: 0 10px;
   line-height: 20px;
+}
+
+.about-me-image{
+  border: 2px solid rgb(30, 255, 0);
+  width: 90%;
+
 }
 
 .about-me-image-container{
@@ -721,8 +735,9 @@ button {
   box-shadow: 8px 8px 2px teal;
 }
 
-.about-me-image{
-  width: 90%;
+.about-image{
+  width: 250px;
+  height: 250px;
 }
 
 .about-image{
@@ -769,6 +784,10 @@ button {
     margin-top: 5px; 
     line-height: 20px;
   }
+
+  .about-me-image{
+
+  }
   
   .about-me-image-container{
     width: 200px;
@@ -777,7 +796,7 @@ button {
     box-shadow: 8px 8px 2px teal;
   }
   
-  .about-me-image{
+  .about-image{
     width: 100%;
     height: 100%;
   }
@@ -909,7 +928,7 @@ background: transparent;
 ::moz-input-placeholder{
   color: aquamarine;
 }
-button:hover{
+.form-button:hover{
   color: orange;
   background-color: cyan;
 }
