--- a/portfolio.css
+++ b/portfolio.css
@@ -823,6 +823,7 @@ button {
 }
 
 .about-me-content{
+  border: 2px solid yellow;
   flex-direction: column;
   margin-top: -60px; 
   width: 95%;
@@ -830,10 +831,17 @@ button {
 }
 
 .about-me-text{
+  border: 2px solid rgb(0, 255, 72);
   width: 90%;
-  height: 95%; 
+  height: 75%; 
   margin-top: 0; 
   line-height: 18px;
+}
+
+.about-me-image{
+  border: 2px solid teal;
+  height: 25%;
+
 }
 
 .about-me-image-container{
@@ -843,9 +851,9 @@ button {
   box-shadow: 8px 8px 2px teal;
 }
 
-.about-me-image{
-  width: 100%;
-  height: 100%;
+.about-image{
+  width: 200px;
+  height: 200px;
 }
 
 .proficiency-ul {
