--- a/portfolio.css
+++ b/portfolio.css
@@ -611,6 +611,7 @@ button {
   height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 
 }
 
@@ -714,7 +715,6 @@ button {
 }
 
 .about-me-text{
-  border: 2px solid red;
   width: 90%;
   height: 95%; 
   margin-top: 15px; 
@@ -723,7 +723,6 @@ button {
 }
 
 .about-me-image{
-  border: 2px solid rgb(30, 255, 0);
   width: 90%;
 
 }
@@ -768,7 +767,7 @@ button {
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) {
    
   .about-me{
-    height: 150vh;
+    height: 180vh;
   }
   
   .about-me-content{
@@ -819,12 +818,11 @@ button {
 @media only screen and (max-width: 480px) {
   
 .about-me{
-  height: 110vh;
+  height: 130vh;
   margin-top: 20px;
 }
 
 .about-me-content{
-  border: 2px solid yellow;
   flex-direction: column;
   margin-top: -60px; 
   width: 95%;
@@ -832,7 +830,6 @@ button {
 }
 
 .about-me-text{
-  border: 2px solid rgb(0, 255, 72);
   width: 90%;
   height: 60%; 
   margin-top: 0; 
@@ -840,7 +837,6 @@ button {
 }
 
 .about-me-image{
-  border: 2px solid teal;
   height: 40%;
 
 }
