--- a/portfolio.css
+++ b/portfolio.css
@@ -224,7 +224,7 @@ a.site-logo {
 
 /* HERO SECTION STARTS */
 .hero{
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -375,7 +375,7 @@ hr{
  @media only screen and (max-width: 768px) {
 
   .hero{
-    height: 100vh;
+    height: 80vh;
   }
 
   .meet-me{
@@ -583,6 +583,10 @@ button {
   align-items: center;
 }
 
+.dashed-heading{
+  border: 2px solid red;
+}
+
 .separator{
   display: flex;
   align-items: center;
@@ -657,7 +661,6 @@ button {
 }
 
 .about-me-content{
-  border: 2px solid red;
   width: 85%;
   height: 98%;
 }
@@ -673,7 +676,6 @@ button {
 }
 
 .about-me-text{
-  border: 2px solid rgb(30, 255, 0);
   width: 50%;
   height: 98%; 
   padding: 0 10px;
@@ -820,7 +822,7 @@ button {
 @media only screen and (max-width: 480px) {
   
 .about-me{
-  height: 130vh;
+  height: 110vh;
   margin-top: 20px;
 }
 
@@ -867,6 +869,335 @@ button {
 } 
 }
 /* ABOUT ME SECTION ENDS */
+
+/* PROJECTS SECTION STARTS */
+.projects{
+  margin-top: 50px;
+  height: 200vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.projects-container{
+  width: 95%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.project-1, .project-2, .project-3{
+  width: 85%;
+  height: 33%;
+  height: 95%;
+  padding: 0 20px 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#project-2{
+  flex-direction: row-reverse;
+  margin-left: 100px;
+}
+
+.project-content-1{
+  background-color: rgb(34, 34, 112);
+  padding: 10px 10px 10px 20px;
+  width: 40%;
+  height: 50%;
+  position: relative;
+  left: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: space-between;
+}
+
+#project-content-1{
+  left: -60px;
+}
+
+.project-topic{
+  height: 15%;
+
+}
+
+.project-description{
+  height: 45%;
+}
+
+.project-paragraph{
+  margin: 0;
+}
+
+.project-tech{
+  text-align: center;
+  height: 10%;
+  word-spacing: 20px;
+
+}
+
+.project-links{
+  height: 15%;
+}
+
+
+.github, .external-link{
+  width: 25px;
+  height: 25px;
+}
+
+#project-links-2{
+  text-align: end;
+}
+
+
+.project-content-2{
+  width: 40%;
+  height: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-content-2-image{
+  width: 90%;
+  height: 100%;
+}
+
+#project-img-2{
+  width: 100%;
+  height: 90%;
+}
+
+#project-img-3{
+  width: 100%;
+  height: 90%;
+}
+
+/* SMALL SCREENS, LAPTOPS */
+@media only screen and (max-width: 1024px) {
+    .projects{
+      height: 200vh;
+      margin-top: 0px;
+    }
+
+
+    .project-1, .project-2, .project-3{
+      width: 90%;
+      height: 30%;
+      height: 95%;
+      padding: 0 20px 0 0;
+    }
+
+    .project-content-1{
+      padding: 10px 10px 10px 20px;
+      width: 50%;
+      height: 50%;
+      left: 60px;
+    }
+    
+#project-content-1{
+  left: -60px;
+}
+
+.project-topic{
+  height: 15%;
+
+}
+
+.project-description{
+  height: 45%;
+}
+
+.github, .external-link{
+  width: 20px;
+  height: 20px;
+}
+
+.project-content-2{
+  width: 40%;
+  height: 80%;
+}
+} 
+
+ /* iPADS, TABLETS */
+ @media only screen and (max-width: 768px) {
+   .projects{
+     height: 150vh;
+
+   }
+   .project-1, .project-2, .project-3{
+    width: 90%;
+    height: 33%;
+    padding: 0 20px 0 0;
+    flex-direction: row;
+  }
+
+  #project-2{
+  }
+
+  .project-content-1{
+    background-color: rgb(34, 34, 112);
+    padding: 5px 5px 5px 10px;
+    width: 60%;
+    height: 60%;
+    position: relative;
+    left: 40px;
+  }
+
+  .project-content-2{
+    width: 40%;
+    height: 95%;
+  }
+
+  .project-content-2-image{
+    width: 110%;
+    height: 90%;
+  }
+
+#project-img-2{
+  width: 110%;
+  height: 85%;
+}
+
+#project-img-3{
+  width: 110%;
+  height: 85%;
+}
+
+       
+} 
+
+ /* MOBILE LANDSCAPE */
+ @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
+
+} 
+
+/* MOBILE PHONE POTRAIT */
+@media only screen and (max-width: 480px) { 
+  
+  .projects{
+    height: 200vh;
+
+  }
+
+  .projects-container{
+    margin-top: 0;
+    width: 99%;
+  }
+
+  .project-1, .project-2, .project-3{
+   border: 2px solid rgb(128, 13, 0);
+   width: 95%;
+   height: 33%;
+   padding: 4px;
+   flex-direction: column-reverse;
+ }
+
+ #project-2{
+   margin-left: 0;
+   flex-direction: column-reverse;
+ }
+
+ .project-content-1{
+   background-color: rgb(34, 34, 112);
+   padding: 5px 5px 5px 10px;
+   width: 95%;
+   height: 50%;
+   position: relative;
+   left: 0;
+   bottom: 120px;
+ }
+
+ #project-content-1{
+  left: 0;
+}
+
+ .project-content-2{
+  border: 2px solid white;
+   width: 90%;
+   height: 80%;
+ }
+
+ .project-content-2-image{
+   width: 110%;
+   height: 90%;
+ }
+
+#project-img-2{
+ width: 110%;
+ height: 100%;
+}
+
+#project-img-3{
+ width: 110%;
+ height: 100%;
+}
+}
+
+
+
+/* PROJECTS SECTION ENDS */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
  /* CONTACT-ME SECTION STARTS */
