--- a/portfolio.css
+++ b/portfolio.css
@@ -841,13 +841,12 @@ button {
 }
 
 .about-me-image{
-  margin-top: 25px;
+  margin-top: 30px;
   height: 40%;
 
 }
 
 .about-me-image-container{
-  border: 2px solid red;
   width: 200px;
   height: 200px;
   margin-left: 0;
@@ -855,7 +854,6 @@ button {
 }
 
 .about-image{
-  border: 2px solid red;
   width: 200px;
   height: 200px;
 }
@@ -884,7 +882,7 @@ button {
 }
 
 .projects-container{
-  border: 1px solid teal;
+  border: 1px solid rgb(213, 17, 231);
   width: 95%;
   height: 90%;
   display: flex;
