--- a/portfolio.css
+++ b/portfolio.css
@@ -584,7 +584,7 @@ button {
 }
 
 .dashed-heading{
-  border: 2px solid red;
+  border: 2px dashed rgb(0, 255, 85);
 }
 
 .separator{
@@ -882,7 +882,6 @@ button {
 }
 
 .projects-container{
-  border: 1px solid rgb(213, 17, 231);
   width: 95%;
   height: 90%;
   display: flex;
@@ -893,7 +892,7 @@ button {
 }
 
 .project-1, .project-2, .project-3{
-  width: 85%;
+  width: 90%;
   height: 33%;
   height: 95%;
   padding: 0 20px 0 0;
@@ -911,7 +910,7 @@ button {
 .project-content-1{
   background-color: rgb(34, 34, 112);
   padding: 10px 10px 10px 20px;
-  width: 40%;
+  width: 50%;
   height: 50%;
   position: relative;
   left: 60px;
@@ -961,8 +960,8 @@ button {
 
 
 .project-content-2{
-  width: 35%;
-  height: 85%;
+  width: 40%;
+  height: 90%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -971,17 +970,17 @@ button {
 
 .project-content-2-image{
   width: 90%;
-  height: 100%;
+  height: 105%;
 }
 
 #project-img-2{
   width: 90%;
-  height: 90%;
+  height: 100%;
 }
 
 #project-img-3{
   width: 90%;
-  height: 90%;
+  height: 100%;
 }
 
 /* SMALL SCREENS, LAPTOPS */
@@ -996,14 +995,14 @@ button {
 
 
     .project-1, .project-2, .project-3{
-      width: 90%;
-      height: 30%;
+      width: 95%;
+      height: 33%;
       height: 95%;
       padding: 0 20px 0 0;
     }
 
     .project-content-1{
-      padding: 10px 10px 10px 20px;
+      padding: 10px 10px 5px 20px;
       width: 60%;
       height: 40%;
       left: 60px;
@@ -1014,13 +1013,14 @@ button {
 }
 
 .project-topic{
-  height: 15%;
+  height: 12%;
 
 }
 
 .project-description{
-  height: 45%;
+  height: 50%;
 }
+
 
 .github, .external-link{
   width: 20px;
@@ -1028,9 +1028,21 @@ button {
 }
 
 .project-content-2{
-  width: 50%;
-  height: 70%;
+  width: 55%;
+  height: 85%;
 }
+
+
+#project-img-2{
+  width: 90%;
+  height: 95%;
+}
+
+#project-img-3{
+  width: 90%;
+  height: 100%;
+}
+
 } 
 
  /* iPADS, TABLETS */
