--- a/portfolio.css
+++ b/portfolio.css
@@ -584,7 +584,7 @@ button {
 }
 
 .dashed-heading{
-  border: 2px dashed rgb(0, 255, 85);
+  border: 2px dashed rgb(255, 204, 0);
 }
 
 .separator{
@@ -1049,10 +1049,13 @@ button {
  @media only screen and (max-width: 768px) {
    .projects{
      height: 150vh;
-
    }
+   
+   .projects-container{
+   }
+
    .project-1, .project-2, .project-3{
-    width: 90%;
+    width: 99%;
     height: 33%;
     padding: 0 20px 0 0;
     flex-direction: row;
@@ -1064,15 +1067,15 @@ button {
   .project-content-1{
     background-color: rgb(34, 34, 112);
     padding: 5px 5px 5px 10px;
-    width: 60%;
-    height: 60%;
+    width: 70%;
+    height: 50%;
     position: relative;
     left: 40px;
   }
 
   .project-content-2{
-    width: 40%;
-    height: 95%;
+    width: 35%;
+    height: 90%;
   }
 
   .project-content-2-image{
@@ -1095,20 +1098,69 @@ button {
 
  /* MOBILE LANDSCAPE */
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
+   
+  .projects{
+    height: 250vh;
+  }
+  
+  .projects-container{
+  }
 
+  .project-1, .project-2, .project-3{
+   width: 99%;
+   height: 33%;
+   padding: 0 20px 0 0;
+   flex-direction: row;
+ }
+
+ #project-2{
+ }
+
+ .project-content-1{
+   background-color: rgb(34, 34, 112);
+   padding: 5px 5px 5px 10px;
+   width: 70%;
+   height: 50%;
+   position: relative;
+   left: 40px;
+ }
+
+ .project-content-2{
+   width: 35%;
+   height: 90%;
+ }
+
+ .project-content-2-image{
+   width: 110%;
+   height: 90%;
+ }
+
+#project-img-2{
+ width: 110%;
+ height: 85%;
+}
+
+#project-img-3{
+ width: 110%;
+ height: 85%;
+}
+
+      
+} 
 } 
 
 /* MOBILE PHONE POTRAIT */
 @media only screen and (max-width: 480px) { 
   
   .projects{
-    height: 200vh;
+    height: 220vh;
 
   }
 
   .projects-container{
     margin-top: 70px;
     width: 99%;
+    height: 90%;
   }
 
   .project-1, .project-2, .project-3{
