--- a/portfolio.css
+++ b/portfolio.css
@@ -584,7 +584,7 @@ button {
 }
 
 .dashed-heading{
-  border: 2px dashed rgb(255, 204, 0);
+  border: 2px dashed rgb(255, 0, 255);
 }
 
 .separator{
@@ -1165,7 +1165,7 @@ button {
 
   .project-1, .project-2, .project-3{
    width: 95%;
-   height: 33%;
+   height: 40%;
    padding: 4px;
    flex-direction: column-reverse;
  }
@@ -1178,13 +1178,13 @@ button {
  .project-content-1{
    background-color: rgb(34, 34, 112);
    color: #d8c0b7;
+   font-size: 12px;
    opacity: 90%;
    padding: 5px;
    width: 95%;
-   height: 70%;
-   position: relative;
+   height: 80%;
    left: 0;
-   bottom: 120px;
+   bottom: 100px;
  }
 
  #project-content-1{
@@ -1221,23 +1221,29 @@ button {
 }
 
  .project-content-2{
-   width: 90%;
-   height: 80%;
+  display: inline;
+   overflow: hidden;
+   width: 99%;
+   height: 120%;
  }
 
  .project-content-2-image{
    width: 100%;
-   height: 90%;
+   height: 100%;
  }
 
 #project-img-2{
+  inherits: unset;
+  /* overflow: visible;
  width: 100%;
- height: 100%;
+ height: 120%; */
 }
 
 #project-img-3{
+  inherits: unset;
+  /* overflow: visible;
  width: 100%;
- height: 100%;
+ height: 120%; */
 }
 }
 
