--- a/portfolio.css
+++ b/portfolio.css
@@ -1178,7 +1178,7 @@ button {
  .project-content-1{
    background-color: rgb(34, 34, 112);
    color: #d8c0b7;
-   font-size: 12px;
+   font-size: 15px;
    opacity: 90%;
    padding: 5px;
    width: 95%;
@@ -1228,22 +1228,23 @@ button {
  }
 
  .project-content-2-image{
+  border: 1px solid rgb(128, 9, 0); 
    width: 100%;
-   height: 100%;
+   height: 120%;
  }
 
 #project-img-2{
-  inherits: unset;
-  /* overflow: visible;
- width: 100%;
- height: 120%; */
+  overflow: visible; 
+  width: 100%;
+  height: 105%;
+  /* inherits: unset; */
 }
 
 #project-img-3{
-  inherits: unset;
-  /* overflow: visible;
+  /* inherits: unset; */
+  overflow: visible; 
  width: 100%;
- height: 120%; */
+ height: 105%; 
 }
 }
 
