--- a/portfolio.css
+++ b/portfolio.css
@@ -871,6 +871,8 @@ button {
 }
 /* ABOUT ME SECTION ENDS */
 
+
+
 /* PROJECTS SECTION STARTS */
 .projects{
   margin-top: 50px;
@@ -940,12 +942,13 @@ button {
 .project-tech{
   text-align: center;
   height: 10%;
-  word-spacing: 20px;
+  word-spacing: 30px;
 
 }
 
 .project-links{
   height: 15%;
+  word-spacing: 10px;
 }
 
 
@@ -1201,13 +1204,14 @@ button {
 }
 
 .project-paragraph{
+  padding: 3px;
   margin: 0;
 }
 
 .project-tech{
   word-spacing: 5px;
   height: 10%;
-
+  margin: 5px 2px 5px 2px;
 }
 
 .github, .external-link{
@@ -1228,7 +1232,6 @@ button {
  }
 
  .project-content-2-image{
-  border: 1px solid rgb(128, 9, 0); 
    width: 100%;
    height: 120%;
  }
@@ -1236,7 +1239,7 @@ button {
 #project-img-2{
   overflow: visible; 
   width: 100%;
-  height: 105%;
+  height: 100%;
   /* inherits: unset; */
 }
 
@@ -1244,7 +1247,7 @@ button {
   /* inherits: unset; */
   overflow: visible; 
  width: 100%;
- height: 105%; 
+ height: 100%; 
 }
 }
 
