--- a/portfolio.css
+++ b/portfolio.css
@@ -1263,8 +1263,8 @@ button {
 }
 
 .other-projects-container{
-  padding: 0 5px 0 5px;
-  width: 75%;
+  padding: 0 10px 0 10px;
+  width: 85%;
   height: 90%;
   display: flex;
   flex-direction: row;
@@ -1286,6 +1286,7 @@ button {
 .other-projects-content-2{
   background-color: rgb(34, 34, 112);
   height: 60%;
+  padding: 0 5px 0 5px;
 }
 
 #other-projects-topic{
@@ -1417,7 +1418,28 @@ button {
 
  /* MOBILE LANDSCAPE */
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
+  
+  .other-projects{
+    border: 2px solid rgb(233, 13, 13);
+    margin-top: -20px;
+     height: 450vh;
+   }
 
+   .other-projects-container{
+     height: 90%;
+   }
+
+   .other-projects-content{
+    height: 30%;
+  }
+
+   .other-projects-content-1{
+     height: 40%;
+   }
+
+   .other-projects-content-2{
+    height: 50%;
+  }
 } 
 
 /* MOBILE PHONE POTRAIT */
