--- a/portfolio.css
+++ b/portfolio.css
@@ -1317,7 +1317,6 @@ button {
  @media only screen and (max-width: 1024px) {
     
 .other-projects-container{
-  border: 2px solid rgb(0, 255, 98);
   padding: 0 5px 0 5px;
   width: 80%;
   height: 90%;
@@ -1369,7 +1368,6 @@ button {
   }
   
   .other-projects-container{
-    border: 2px solid rgb(255, 0, 242);
     padding: 0 5px 0 5px;
     width: 95%;
     height: 90%;
@@ -1420,9 +1418,8 @@ button {
  @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
   
   .other-projects{
-    border: 2px solid rgb(233, 13, 13);
     margin-top: -20px;
-     height: 450vh;
+     height: 500vh;
    }
 
    .other-projects-container{
@@ -1430,7 +1427,7 @@ button {
    }
 
    .other-projects-content{
-    height: 30%;
+    height: 25%;
   }
 
    .other-projects-content-1{
@@ -1443,7 +1440,51 @@ button {
 } 
 
 /* MOBILE PHONE POTRAIT */
-@media only screen and (max-width: 480px) { 
+@media only screen and (max-width: 480px) {
+      
+.other-projects-container{
+  padding: 0 2px 0 2px;
+  width: 90%;
+  height: 90%;
+}
+
+.other-projects-content{
+  height: 25%;
+  width: 100%;
+}
+
+.other-projects-content-1{
+  background-color: yellow;
+  height: 40%;
+}
+.other-projects-content-2{
+  background-color: rgb(34, 34, 112);
+  font-size: 12px;
+  height: 50%;
+}
+
+#other-projects-topic{
+}
+
+#other-projects-description{
+  height: 45%;
+}
+
+#other-projects-paragraph{
+  height: 100%;
+  padding: 2px;
+}
+
+#other-projects-tech{
+  word-spacing: 5px;
+  margin-top: 10px;
+}
+
+#other-projects-links{
+  height: 10%;
+  word-spacing: 10px;
+  margin-top: 10px;
+}
 
 }
 
