--- a/portfolio.css
+++ b/portfolio.css
@@ -1178,8 +1178,9 @@ button {
 
  .project-content-1{
    background-color: rgb(34, 34, 112);
-   color: #d8c0b7;
-   font-size: 18px;
+   color: #d8f2d2;
+   /* color: #d8c0b7; */
+   font-size: 15px;
    opacity: 90%;
    padding: 5px;
    width: 95%;
@@ -1202,6 +1203,7 @@ button {
 }
 
 .project-paragraph{
+  font-size: 12px;
   padding: 3px;
   margin: 0;
 }
