--- a/portfolio.css
+++ b/portfolio.css
@@ -1178,8 +1178,7 @@ button {
 
  .project-content-1{
    background-color: rgb(34, 34, 112);
-   color: #3ef515;
-   /* color: #d8c0b7; */
+   color: #d8c0b7;
    font-size: 15px;
    opacity: 90%;
    padding: 5px;
@@ -1256,7 +1255,7 @@ button {
 
 /* OTHER PROJECTS SECTION STARTS */
 .other-projects{
-  height: 150vh;
+  height: 180vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1284,7 +1283,16 @@ button {
 .other-projects-content-1{
   background-color: yellow;
   height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.other-projects-image{
+  width: 100%;
+  height: 100%;
+}
+
 .other-projects-content-2{
   background-color: rgb(34, 34, 112);
   height: 60%;
@@ -1378,16 +1386,27 @@ button {
   .other-projects-content{
     height: 25%;
     width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   
 .other-projects-content-1{
-  background-color: yellow;
-  height: 50%;
+  background-color: rgb(153, 169, 202);
+  height: 40%;
+  width: 70%;
 }
+
+.other-projects-image{
+  width: 100%;
+  height: 100%;
+}
+
 .other-projects-content-2{
   background-color: rgb(34, 34, 112);
-  height: 40%;
+  height: 50%;
+  width: 70%;
 }
 
 #other-projects-topic{
@@ -1445,8 +1464,8 @@ button {
 @media only screen and (max-width: 480px) {
       
 .other-projects-container{
-  padding: 0 2px 0 2px;
-  width: 90%;
+  padding: 0;
+  width: 100%;
   height: 90%;
 }
 
@@ -1458,10 +1477,12 @@ button {
 .other-projects-content-1{
   background-color: yellow;
   height: 40%;
+  width: 90%;
 }
 .other-projects-content-2{
   background-color: rgb(34, 34, 112);
   font-size: 15px;
+  width: 90%;
   height: 50%;
   justify-content: space-between;
 }
