--- a/portfolio.css
+++ b/portfolio.css
@@ -1,4 +1,5 @@
 body {
+  border: 2px solid red;
   margin: 0;
   padding: 0;
   font-family: 'Roboto Flex', sans-serif;
@@ -6,6 +7,23 @@ body {
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(13,26,71,1) 77%);
 }
+
+ /* SMALL SCREENS, LAPTOPS */
+ @media only screen and (max-width: 1024px) {
+  body {
+    border: 2px solid teal;
+  }
+    
+} 
+
+ /* iPADS, TABLETS */
+ @media only screen and (max-width: 768px) {
+  body {
+    border: 2px solid yellow;
+  }
+    
+       
+} 
 
 
 /* NAV SECTION BEGINS */
@@ -369,6 +387,7 @@ hr{
 
 .icons{
   margin-top: -10px;
+  padding-left: 5px;
 }
 
 } 
@@ -419,9 +438,9 @@ hr{
 
 .icons{
   margin-top: -20px;
-  margin-left: -10px;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
+  padding-left: 5px;
 }
 
 button {
