--- a/portfolio.css
+++ b/portfolio.css
@@ -310,11 +310,16 @@ a.site-logo {
   font-size: 18px;
 }
 
+.social-buttons{
+  border: 2px solid red;
+  width: 30%;
+  height: 100%;
+}
+
 .icons{
   margin-top: 8px;
-  width: 40px;
-  height: 40px;
-  padding-left: 10px;
+  width: 22%;
+  height: 30px;
   color: #fafafa;
 }
 
@@ -328,7 +333,7 @@ button {
   color: #ffffff;
   font-size: 20px;
   width: 30%;
-  height: 60px;
+  height: 100%;
   padding: 5px 10px 5px 10px;
   text-decoration: none;
   text-transform: capitalize;
