--- a/portfolio.css
+++ b/portfolio.css
@@ -251,7 +251,6 @@ a.site-logo {
   }
 
   .meet-me{
-    border: 2px solid red;
     margin-top: 50px;
     margin: 10px 10px;
     height: 70%;
@@ -311,9 +310,9 @@ a.site-logo {
   border: 2px solid rgb(255, 0, 247);
   width: 80%;
   height: 20%;
-  margin-top: 5px;
-  opacity: 60%;
-  font-size: 18px;
+  margin: 0;
+  opacity: 70%;
+  font-size: 20px;
 }
 
 .social-buttons{
@@ -340,8 +339,8 @@ button {
   color: #ffffff;
   font-size: 20px;
   width: 30%;
-  height: 100%;
-  padding: 5px 10px 5px 10px;
+  height: 60px;
+  padding: 5px;
   text-decoration: none;
   text-transform: capitalize;
 }
