--- a/portfolio.css
+++ b/portfolio.css
@@ -251,9 +251,10 @@ a.site-logo {
   }
 
   .meet-me{
+    border: 2px solid red;
     margin-top: 50px;
     margin: 10px 10px;
-    height: 70%;
+    height: 80%;
     width: 75%;
     display: flex;
     flex-direction: row;
@@ -264,14 +265,14 @@ a.site-logo {
 .text-area{
   border: 2px solid yellow;
     width: 60%;
-    height: 80%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
  .hero-image-container{
-  height: 70%;
+  height: 80%;
   width: 40%;
   display: flex;
   flex-direction: column;
