--- a/portfolio.css
+++ b/portfolio.css
@@ -251,8 +251,8 @@ a.site-logo {
   }
 
   .meet-me{
-    border: 2px solid red;
-    margin-top: 50px;
+    border: 2px solid rgb(32, 73, 73);
+    margin-top: 100px;
     margin: 10px 10px;
     height: 80%;
     width: 75%;
@@ -287,6 +287,7 @@ a.site-logo {
  
 
 .hero-text-1{
+  height: 10%;
   border: 2px solid rgb(204, 0, 255);
     font-size:large;
 }
@@ -294,6 +295,7 @@ a.site-logo {
 .hero-text-2{
   border: 2px solid rgb(170, 255, 0);
     font-size:3rem;
+  height: 13%;
     font-family: 'Rowdies', cursive;
     margin: 0;
     text-align: start;
@@ -301,7 +303,8 @@ a.site-logo {
 
 .hero-text-3{
   border: 2px solid rgb(251, 255, 0);
-    font-size:2.2rem;
+  height: 13%;  
+  font-size:2.2rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
     letter-spacing: 5px;
@@ -310,13 +313,14 @@ a.site-logo {
 .hero-paragraph{
   border: 2px solid rgb(255, 0, 247);
   width: 80%;
-  height: 20%;
+  height: 23%;
   margin: 0;
   opacity: 70%;
   font-size: 20px;
 }
 
 .social-buttons{
+  height: 15%;
   border: 2px solid rgb(94, 255, 0);
   width: 30%;
   height: 100%;
@@ -340,7 +344,7 @@ button {
   color: #ffffff;
   font-size: 20px;
   width: 30%;
-  height: 60px;
+  height: 20%;
   padding: 5px;
   text-decoration: none;
   text-transform: capitalize;
