--- a/portfolio.css
+++ b/portfolio.css
@@ -288,12 +288,12 @@ a.site-logo {
 
 .hero-text-1{
   height: 10%;
-  border: 2px solid rgb(204, 0, 255);
+  /* border: 2px solid rgb(204, 0, 255); */
     font-size:large;
 }
 
 .hero-text-2{
-  border: 2px solid rgb(170, 255, 0);
+  /* border: 2px solid rgb(170, 255, 0); */
     font-size:3rem;
   height: 13%;
     font-family: 'Rowdies', cursive;
@@ -302,7 +302,7 @@ a.site-logo {
 }
 
 .hero-text-3{
-  border: 2px solid rgb(251, 255, 0);
+  /* border: 2px solid rgb(251, 255, 0); */
   height: 13%;  
   font-size:2.2rem;
     font-family: 'Rowdies', cursive;
@@ -311,7 +311,7 @@ a.site-logo {
 }
 
 .hero-paragraph{
-  border: 2px solid rgb(255, 0, 247);
+  /* border: 2px solid rgb(255, 0, 247); */
   width: 80%;
   height: 23%;
   margin: 0;
@@ -320,13 +320,15 @@ a.site-logo {
 }
 
 .social-buttons{
+  margin-top: 10px;
   height: 15%;
-  border: 2px solid rgb(94, 255, 0);
+  /* border: 2px solid rgb(94, 255, 0); */
   width: 30%;
 }
 
 .icons{
   margin-top: 8px;
+  margin-top: 5px;
   padding-left: 5px;
   width: 40px;
   height: 40px;
@@ -343,7 +345,7 @@ button {
   color: #ffffff;
   font-size: 20px;
   width: 30%;
-  height: 20%;
+  height: 15%;
   padding: 5px;
   text-decoration: none;
   text-transform: capitalize;
