--- a/portfolio.css
+++ b/portfolio.css
@@ -263,9 +263,9 @@ a.site-logo {
   }
 
 .text-area{
-  border: 2px solid yellow;
+  border: 2px solid teal;
     width: 60%;
-    height: 90%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -288,6 +288,7 @@ a.site-logo {
 
 .hero-text-1{
   height: 10%;
+  margin: 0;
   /* border: 2px solid rgb(204, 0, 255); */
     font-size:large;
 }
