--- a/portfolio.css
+++ b/portfolio.css
@@ -289,12 +289,12 @@ a.site-logo {
 .hero-text-1{
   height: 10%;
   margin: 0;
-  border: 2px solid rgb(204, 0, 255);
+  /* border: 2px solid rgb(204, 0, 255); */
     font-size:large;
 }
 
 .hero-text-2{
-  border: 2px solid rgb(170, 255, 0);
+  /* border: 2px solid rgb(170, 255, 0); */
     font-size: 3rem;
   height: 15%;
     font-family: 'Rowdies', cursive;
@@ -303,12 +303,12 @@ a.site-logo {
 }
 
 .hero-text-3{
-  border: 2px solid rgb(251, 255, 0);
+  /* border: 2px solid rgb(251, 255, 0); */
   height: 15%;  
-  font-size:2.2rem;
+  font-size: 2rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
 }
 
 .hero-paragraph{
@@ -330,7 +330,6 @@ a.site-logo {
 .icons{
   margin-top: 8px;
   margin-top: 5px;
-  padding-left: 5px;
   width: 40px;
   height: 40px;
   color: #fafafa;
